tests/ui/derived_rhs_no_ref_unit.stderr
error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Baz
             Foo
             f64
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Baz
             Foo
             f64
note: required because of the requirements on the impl of `std::ops::Mul<Bar>` for `Foo`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Baz
             Foo
             f64
note: required because of the requirements on the impl of `std::ops::Mul<Foo>` for `Bar`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Bar: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Bar`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Baz
             Foo
             f64
note: required because of the requirements on the impl of `std::ops::Div<Bar>` for `Baz`
  --> tests/ui/derived_rhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
...
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
